[package]
name = "pkcs12_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"

hmac = "0.12.1"
rsa = { version = "0.9.6", features = ["pkcs5"] }
sha2 = "0.10.8"

der = { version = "0.7.8", features = ["alloc", "derive", "oid", "pem"] }
x509-cert = "0.2.5"
cms = { version = "0.2.3", features = ["builder"] }
const-oid = { version = "0.9.5", features = ["db"] }
pkcs12 = { version = "0.1.0", features = ["kdf"] }
pkcs5 = "0.7.1"

pbkdf2 = "0.12.2"

clap = {version = "4.4.18", features = ["std", "derive"] }
log = "0.4.20"
log4rs = "1.2.0"
serde = "1.0.200"

[dev-dependencies]
hex-literal = "0.4.1"
subtle-encoding = "0.5.1"
openssl = "0.10.64"