[package]
name = "pkcs12_util"
version = "0.1.1-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"

hmac = "0.13.0-pre.3"
rsa = {version = "0.10.0-pre.1", default-features = false}
sha2 = "0.11.0-pre.3"

der = { version="0.8.0-pre.0", features = ["alloc", "derive", "flagset", "oid"] }
x509-cert = { version = "0.3.0-pre", default-features = false, features = ["hazmat","pem"] }
cms = { version = "0.3.0-pre", features = ["builder"] }
const-oid = { version = "0.10.0-pre.2", default-features = false, features = ["db"] }
pkcs12 = { version = "0.2.0-pre", features = ["kdf"] }
pkcs5 = "0.8.0-pre.0"
pkcs8 = { version = "0.11.0-pre.0", features = ["encryption"] }

pbkdf2 = "0.12.2"

clap = {version = "4.4.18", features = ["std", "derive"] }
log = "0.4.20"
log4rs = "1.2.0"
serde = "1.0.200"

[dev-dependencies]
hex-literal = "0.4.1"
subtle-encoding = "0.5.1"
openssl = "0.10.64"

[patch.crates-io]
cms        = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
const-oid  = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
der        = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
der_derive = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
pkcs1      = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
pkcs8      = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
spki       = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
x509-cert  = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
pkcs5  = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
pkcs12  = { git = "https://github.com/baloo/formats.git", branch = "baloo/certval" }
cbc = {git = "https://github.com/RustCrypto/block-modes.git"}
sha2 = { git = "https://github.com/RustCrypto/hashes.git" }
